welcome.lessons.welcome.bat.bool1.Max1020.scala.error
max1020:3: error: type mismatch;
 found   : Boolean(false)
 required: Int
		return false
                       ^