welcome.lessons.welcome.bat.bool1.Max1020.scala.code
def max1020(a:Int, b:Int):Int = {
	if((a>=20 && 0>=a) && (b>=20 && 0>=b)){
		return false
	}else if(a>b){
		return a
	}else return b
}
